src/ui/snapshots/rusty_amp__ui__draw__tests__add_pedal_modal.snap
---
source: src/ui/draw.rs
expression: text
---
╔════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║  R U S T Y  A M P  v0.2.14  ▐  MESA DUAL RECTIFIER  ▐  MESA 4×12 (V30)  ▐  ● POWER ON  ▐  ○ OFF AIR                                                                    ║
║  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                                                                                 ║
║════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════║
║  INPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║ OUTPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║         -60        -48        -36        -24        -12       -6     0 dB    0W  -120.0 dB                                                                             ║
║┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓║
║┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]  ↑/↓  A                                CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]  C to toggle                         ┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓║
║┃          ···                    ···                   ···                    ··◇                    ◇··                   ·◇·              ◇··       ···       ···   ┃║
║┃         · ● ◇                  · ● ·                 · ● ·                  · ● ·                  · ● ·                 · ● ·            · ● ·     · ● ·     · ● ·  ┃║
║┃          · ·                    · ◇                   ◇ ·                    · ·                    · ·                   · ·              · ·       ◇ ·       ◇ ·   ┃║
║┃       GAIN 7.5               BASS 10.0              MID 0.0              TREBLE 6.5            PRESENCE 4.0           MASTER 5.5         MIC 4.0  BLEND 0.0 ROOM 0.0 ┃║
║┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┌ GUITAR RIG ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐║
║│╔ NOISE GATE ◉ ══════════════════════════╗╔ T╔ A D D   P E D A L ═══════════════════════════════════════════════════════╗═══╗╔ + ADD ════════════════════════════════╗│║
║│║                2.0  3.0                ║║  ║▶ WHAMMY                                                                  ║   ║║                  ＋                    ║│║
║│║                ▗▄▄▄▄▄▄▄▖               ║║  ║  WAH                                                                     ║   ║║                                       ║│║
║│╚════════════════════════════════════════╝╚══║  COMP                                                                    ║═══╝╚═══════════════════════════════════════╝│║
║│┏┤ SELECT A PEDAL — Tab / ←→ ├━━━━━━━━━━━━━━━║  FUZZ                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│║
║│┃                                            ║  DS-1                                                                    ║                                            ┃│║
║│┃                                            ║  ML-2 METAL CORE                                                         ║                                            ┃│║
║│┃                                            ║  PRE-AMP EQ                                                              ║                                            ┃│║
║│┃                                            ║  GRAPHIC EQ                                                              ║                                            ┃│║
║│┃                                            ║  PARAMETRIC EQ                                                           ║                                            ┃│║
║│┃                                            ║  FLANGER                                                                 ║                                            ┃│║
║│┃                                            ║  CHORUS                                                                  ║                                            ┃│║
║│┃                                            ║  PHASER                                                                  ║                                            ┃│║
║│┃                                            ║  TREMOLO / VIBRATO                                                       ║                                            ┃│║
║│┃                                            ║  DELAY                                                                   ║                                            ┃│║
║│┃                                            ║                                                                          ║                                            ┃│║
║│┃                                            ║                    ↑/↓ navigate  Enter add  Esc close                    ║                                            ┃│║
║│┃                                            ╚══════════════════════════════════════════════════════════════════════════╝                                            ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║                                            Tab section  ←/→ knob  ↑/↓  +/- adjust  Space toggle  D remove  A amp  C cab  I IR                                          ║
║                                       X IR A/B  Z amp A/B  P presets  T tuner  M metro  V plugins  U amp plugin  R record  Q quit                                      ║
╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
