src/ui/snapshots/rusty_amp__ui__draw__tests__default_screen.snap
---
source: src/ui/draw.rs
expression: text
---
╔════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║  R U S T Y  A M P  v0.2.9  ▐  MESA DUAL RECTIFIER  ▐  MESA 4×12 (V30)  ▐  ● POWER ON  ▐  ○ OFF AIR                                                                     ║
║  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                                                                                 ║
║════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════║
║  INPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║ OUTPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║         -60        -48        -36        -24        -12       -6     0 dB    0W  -120.0 dB                                                                             ║
║┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓║
║┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]                                        CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]                                      ┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓║
║┃          ···                    ···                   ···                    ··◇                    ◇··                   ·◇·              ◇··       ···       ···   ┃║
║┃         · ● ◇                  · ● ·                 · ● ·                  · ● ·                  · ● ·                 · ● ·            · ● ·     · ● ·     · ● ·  ┃║
║┃          · ·                    · ◇                   ◇ ·                    · ·                    · ·                   · ·              · ·       ◇ ·       ◇ ·   ┃║
║┃       GAIN 7.5               BASS 10.0              MID 0.0              TREBLE 6.5            PRESENCE 4.0           MASTER 5.5         MIC 4.0  BLEND 0.0 ROOM 0.0 ┃║
║┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┌ GUITAR RIG ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐║
║│╔ TS-808 ◉ ══════════════════════════════╗╔ SPRING REVERB ◉ ══════════════════════╗╔ NOISE GATE ◉ ══════════════════════════╗╔ + ADD ════════════════════════════════╗│║
║│║              4.5  6.0  7.0             ║║             5.5  4.0  2.5             ║║                2.0  3.0                ║║                  ＋                    ║│║
║│║                ▗▄▄▄▄▄▄▄▖               ║║               ▗▄▄▄▄▄▄▄▖               ║║                ▗▄▄▄▄▄▄▄▖               ║║                                       ║│║
║│╚════════════════════════════════════════╝╚═══════════════════════════════════════╝╚════════════════════════════════════════╝╚═══════════════════════════════════════╝│║
║│┏┤ EDITING: TS-808 ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│║
║│┃                        ··◆····                                                ·····◇·                                               ·······                        ┃│║
║│┃                       ···   ···                                              ···   ···                                             ···   ·◇·                       ┃│║
║│┃                       ··  ●  ··                                              ··  ●  ··                                             ··  ●  ··                       ┃│║
║│┃                       ···   ···                                              ···   ···                                             ···   ···                       ┃│║
║│┃                        ··   ··                                                ··   ··                                               ··   ··                        ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                       DRIVE 4.5                                              TONE 6.0                                              LEVEL 7.0                       ┃│║
║│┃                                                                          ▐ ON ▌  ▗▄▄▄▄▄▄▄▖                                                                         ┃│║
║│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║                                            Tab section  ←/→ knob  ↑/↓  +/- adjust  Space toggle  D remove  A amp  C cab  I IR                                          ║
║                                           X IR A/B  Z amp A/B  P presets  T tuner  V plugins  U amp plugin  R record  Q quit                                           ║
╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
