src/ui/snapshots/rusty_amp__ui__draw__tests__ir_browser_modal.snap
---
source: src/ui/draw.rs
expression: text
---
╔════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║  R U S T Y  A M P  v0.2.9  ▐  MESA DUAL RECTIFIER  ▐  MESA 4×12 (V30)  ▐  ● POWER ON  ▐  ○ OFF AIR                                                                     ║
║  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                                                                                 ║
║════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════║
║  INPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║ OUTPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║         -60        -48        -36        -24        -12       -6     0 dB    0W  -120.0 dB                                                                             ║
║┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓║
║┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶╔ C A B I N E T   I R s ═════════════════════════════════════════════════════════════════════════════╗ toggle                         ┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║▶ Built-in cabs (no IR)                                                                             ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━║  (no .wav IRs found — drop files in ./irs or ~/.config/rusty-amp/irs)                              ║━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓║
║┃          ···                   ║                                                                                                    ║      ◇··       ···       ···   ┃║
║┃         · ● ◇                  ║                                                                                                    ║     · ● ·     · ● ·     · ● ·  ┃║
║┃          · ·                   ║                                                                                                    ║      · ·       ◇ ·       ◇ ·   ┃║
║┃       GAIN 7.5               BA║                                                                                                    ║    MIC 4.0  BLEND 0.0 ROOM 0.0 ┃║
║┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞║                                                                                                    ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┌ GUITAR RIG ────────────────────║                                                                                                    ║────────────────────────────────┐║
║│╔ TS-808 ◉ ═════════════════════║                                                                                                    ║═══════════════════════════════╗│║
║│║              4.5  6.0  7.0    ║                                                                                                    ║          ＋                    ║│║
║│║                ▗▄▄▄▄▄▄▄▖      ║                                                                                                    ║                               ║│║
║│╚═══════════════════════════════║                                                                                                    ║═══════════════════════════════╝│║
║│┏┤ SELECT A PEDAL — Tab / ←→ ├━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                        ↑/↓ navigate  Enter load/clear  X A/B  Esc / I close                        ║                               ┃│║
║│┃                               ║                                 no IR loaded — using built-in cabs                                 ║                               ┃│║
║│┃                               ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝                               ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║                                            Tab section  ←/→ knob  ↑/↓  +/- adjust  Space toggle  D remove  A amp  C cab  I IR                                          ║
║                                           X IR A/B  Z amp A/B  P presets  T tuner  V plugins  U amp plugin  R record  Q quit                                           ║
╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
